example-deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: avg-service
spec:
  selector:
    app: avg
  ports:
  - port: 2222
    targetPort: 2222
    name: grpc
